2006-12-13  Luca Ferretti  <elle.uca@libero.it>

	* data/icons/16x16/actions/history-view.svg:
	* data/icons/22x22/actions/history-view.svg:

	Add image sources too.

2006-12-13  Luca Ferretti  <elle.uca@libero.it>

	* data/icons/16x16/actions/Makefile.am:
	* data/icons/16x16/actions/history-view.png:
	* data/icons/22x22/actions/Makefile.am:
	* data/icons/22x22/actions/history-view.png:
	* data/icons/24x24/actions/Makefile.am:
	* data/icons/24x24/actions/history-view.png:
	* data/icons/24x24/actions/web-history.png:

	Updated icon for history from Andreas Nilsson.

	* lib/ephy-stock-icons.h:

	Use "history-view" as named icon. 
	
2006-12-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/actions/Makefile.am:
	* data/icons/16x16/status/Makefile.am:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/actions/Makefile.am:
	* data/icons/22x22/status/Makefile.am:
	* data/icons/24x24/Makefile.am:
	* data/icons/24x24/actions/Makefile.am:
	* data/icons/24x24/status/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/actions/Makefile.am:
	* data/icons/32x32/status/Makefile.am:
	* data/icons/Makefile.am:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/actions/Makefile.am:
	* data/icons/scalable/status/Makefile.am:

	Remove unnecessary rules.

2006-12-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):
	* src/ephy-main.c: (main):

	Move code around.

2006-12-08  Luca Ferretti <elle.uca@libero.it>

	* data/icons/16x16/actions/Makefile.am:
	* data/icons/22x22/actions/Makefile.am:
	* data/icons/32x32/actions/Makefile.am:
	* data/icons/scalable/actions/Makefile.am:

	s/epiphany-download/download\

2006-12-08  Luca Ferretti  <elle.uca@libero.it>

	* data/art/epiphany-bookmarks.png:

	Restore this, still used in bookmarks .desktop file.

2006-12-08  Luca Ferretti <elle.uca@libero.it>

	* data/art/Makefile.am:
	* data/art/epiphany-bookmarks.png: