@@ -3,6 +3,7 @@ size = 16x16
 context = actions
 
 iconsdir = $(themedir)/$(size)/$(context)
+
 icons_DATA = \
 	download.png		\
 	history-view.png
