@@ -3,9 +3,14 @@ size = 22x22
 context = actions
 
 iconsdir = $(themedir)/$(size)/$(context)
+
 icons_DATA = \
 	download.png		\
 	history-view.png
 
+noinst_DATA = \
+	history-view.svg
+
 EXTRA_DIST = \
-	$(icons_DATA)
+	$(icons_DATA)	\
+	$(noinst_DATA)
