@@ -3,8 +3,13 @@ size = 32x32
 context = actions
 
 iconsdir = $(themedir)/$(size)/$(context)
+
 icons_DATA = \
 	download.png
 
+noinst_DATA = \
+	epiphany-download.svg
+
 EXTRA_DIST = \
-	$(icons_DATA)
+	$(icons_DATA)	\
+	$(noinst_DATA)
