@@ -3,8 +3,13 @@ size = 32x32
 context = status
 
 iconsdir = $(themedir)/$(size)/$(context)
+
 icons_DATA = \
 	popup-hidden.png
 
+noinst_DATA = \
+	popup-hidden.svg
+
 EXTRA_DIST = \
-	$(icons_DATA)
+	$(icons_DATA)	\
+	$(noinst_DATA)
