@@ -1,3 +1,13 @@
+2006-12-13  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/icons/16x16/actions/Makefile.am:
+	* data/icons/22x22/actions/Makefile.am:
+	* data/icons/24x24/actions/Makefile.am:
+	* data/icons/32x32/actions/Makefile.am:
+	* data/icons/32x32/status/Makefile.am:
+
+	Dist the icon sources.
+
 2006-12-13  Luca Ferretti  <elle.uca@libero.it>
 
 	* data/icons/16x16/actions/history-view.svg:
